# li-aws-helper

./: .gitignore  .pypirc  Makefile  README.md  pyproject.toml
.circleci/: config.yml
li_aws_helper/: Makefile  aws_config.py  main.py  sts_client.py
li_cli/: aws_config.py  main.py  sts_client.py
licli/: exceptions.py  main.py
licli/aws/: config.py  config_commands.py
licli/aws/secret_token/: sts_client.py  sts_commands.py
tests/: test_lini_cli.py
