[project]
name = "li-aws-helper"
version = "0.4.0"
description = "Package that helps manage aws credentials"
authors = [{name = "Alini Ribeiro", email = "aliniribeiroo@gmail.com"}]
readme = "README.md"


[tool.poetry.scripts]
li = "li_aws_helper.main:app"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
typer = "^0.6.1"
requests-mock = "^1.10.0"
boto3 = "^1.24.71"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[project.urls]
Homepage = "https://github.com/liniribeiro/li-aws-helper"
Documentation = "https://github.com/liniribeiro/li-aws-helper"
Source = "https://github.com/liniribeiro/li-aws-helper"